--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
             <aside id="layout-menu" class="layout-menu-horizontal menu-horizontal menu bg-menu-theme flex-grow-0">
               <div class="container-xl d-flex h-100 align-items-center content-header shadow">
                 <div class="logo mt-4 mt-xl-0">
-                  <img src="./assets/img/branding/logo.svg" alt="">
+                  <a href="#">
+                    <img src="./assets/img/branding/logo.svg" alt="">
+                  </a>
                 </div>
                 <ul class="menu-inner">
                   <!-- Dashboards -->
