--- a/inner-page.html
+++ b/inner-page.html
@@ -311,7 +311,7 @@
                                 <span class="fa fa-phone"></span>
                               </div>
                               <div class="text ps-3">
-                                <p><span class="me-2">هاتف:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+                                <p><span class="me-2">هاتف:</span> <a class="number-unicode" href="tel://1234567920">+ 1235 2355 98</a></p>
                               </div>
                             </div>
                             <div class="dbox w-100 d-flex align-items-center">
