--- a/registration.html
+++ b/registration.html
@@ -15,7 +15,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Dashboard - Analytics | Frest - Bootstrap Admin Template</title>
+    <title>التسجيل بالموقع | مشروع الحلة</title>
 
     <meta name="description" content="" />
 
@@ -523,8 +523,8 @@
                                 
                                 <div class="col-md-12">
                                   <div class="form-group">
-                                    <input type="submit" value="سجل" class="btn btn-primary me-2">
-                                    <input type="submit" value="إلغاء" class="btn btn-outline-primary me-2">
+                                    <input type="submit" value="سجل" class="btn btn-primary me-2 mb-2">
+                                    <input type="submit" value="إلغاء" class="btn btn-outline-primary me-2 mb-2">
                                     <div class="submitting"></div>
                                   </div>
                                 </div>
