--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Dashboard - Analytics | Frest - Bootstrap Admin Template</title>
+    <title>مشروع الحلة</title>
 
     <meta name="description" content="" />
 
