--- a/about-us.html
+++ b/about-us.html
@@ -245,7 +245,7 @@
                   
                   <div class="col-12 col-md-6">
                     <div class="d-block mb-4 mb-md-4 d-flex justify-content-center align-items-center ">
-                      <img class="w-100" src="./assets/img/pages/about-alhula.png" alt="">
+                      <img class="max-img-w-500 w-100" src="./assets/img/pages/about-alhula.png" alt="">
                     </div>
                     <div class="pb-3">
                      <div>
