--- a/registration.html
+++ b/registration.html
@@ -466,6 +466,19 @@
 
                         <div class="col-md-12"><hr></div>
 
+                        <div class="col-md-12">
+                          <div class="form-group">
+                            <label class="form-label" for="name">اسم المركز</label>
+
+                            <select id="select2Basic2" name="country" class="select2 form-select form-select-lg" data-allow-clear="true">
+                              <option value="مركز الحلة">مركز الحلة</option>
+                              <option value="مركز عبد الله راشد الزير">مركز عبد الله راشد الزير</option>
+                              <option value="جمعية الراسخون في العمل الخيرية">جمعية الراسخون في العمل الخيرية</option>
+                          </select>
+
+                          </div>
+                        </div>
+
                         <div class="col-md-6"> 
                           <div class="form-group">
                             <label class="form-label" for="email">نوع الحلقة المختارة</label>
