--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <!-- Icons -->
     <link rel="stylesheet" href="./assets/vendor/fonts/boxicons.css" />
     <link rel="stylesheet" href="./assets/vendor/fonts/fontawesome.css" />
-    <link rel="stylesheet" href="./assets/vendor/fonts/flag-icons.css" />
     <link rel="stylesheet" href="./assets/vendor/fonts/icomoon.css" />
 
     <!-- Core CSS -->
@@ -402,7 +401,7 @@
 
             <!-- Content -->
 
-            <div class="container-xl flex-grow-1 container-p-y zindex-2 home-container">
+            <div class="container-xl flex-grow-1 container-p-y zindex-2 home-container shadow">
               <div class="pointer-events mx-2 mx-md-4 px-0 px-md-3">
                   <div class="services row">
                     <div class="col-12 col-sm-6 col-lg-3 pb-4 pb-lg-0 d-flex justify-content-center">
