--- a/the-branches.html
+++ b/the-branches.html
@@ -226,7 +226,7 @@
 
 
             <!-- Content -->
-            <div class="container-xl flex-grow-1 container-p-y zindex-2 inner-container mt-4">
+            <div class="container-xl flex-grow-1 container-p-y zindex-2 inner-container mt-4 shadow">
               <div class="pointer-events mx-2 mx-md-4 px-0 px-md-3">
                 
                 <nav aria-label="breadcrumb">
