--- a/registration.html
+++ b/registration.html
@@ -85,7 +85,7 @@
 
 
             <!-- Content -->
-            <div class="container-xl flex-grow-1 container-p-y zindex-2 inner-container mt-4" style="max-width: 740px;">
+            <div class="container-xl flex-grow-1 container-p-y zindex-2 inner-container mt-4 shadow" style="max-width: 740px;">
               <div class="pointer-events">
                 <div class="logo mt-4 mt-xl-0">
                   <a href="#">
